2008-12-05  Claudio Saavedra  <csaavedra@igalia.com>

	Patch contributed by Iván Gómez (igomez@igalia.com)

	* src/hildon-pannable-area.c: Add "since" tags to the new API in
	hildon 2.2.

2008-12-05  Claudio Saavedra  <csaavedra@igalia.com>

	* examples/hildon-wizard-dialog-example.c: (on_page_switch),
	(some_page_func), (main): Update the example to use a
	HildonWizardDialogPageFunc function.

	* src/hildon-wizard-dialog-private.h: Add private data for
	the HildonWizardDialogPageFunc function usage.

	* src/hildon-wizard-dialog.c: (hildon_wizard_dialog_class_init),
	(destroy), (hildon_wizard_dialog_init), (response),
	(hildon_wizard_dialog_set_forward_page_func):
	* src/hildon-wizard-dialog.h: Add a HildonWizardDialogPageFunc function,
	that applications can use to stop a HildonWizardDialog to jump to
	the next page.

	Fixes: NB#94214 (No way to stop HildonWizardDialog from going to
	next page)

2008-12-04  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-program.h
	* src/hildon-program-private.h
	* src/hildon-program.c (hildon_program_init)
	(hildon_program_set_common_app_menu)
	(hildon_program_get_common_app_menu):
	New API for setting a common HildonAppMenu for all
	HildonStackableWindows registered with the HildonProgram.

	* src/hildon-stackable-window.c
	(hildon_stackable_window_toggle_menu):
	Use the common HildonAppMenu if a window doesn't have a specific
	one.

	* src/hildon-app-menu-private.h
	* src/hildon-app-menu.c
	(hildon_app_menu_get_parent_window):
	Function to obtain the window a HildonAppMenu is attached to.
	(hildon_app_menu_set_parent_window):
	Hide the menu if the parent window is set to NULL.

2008-12-04  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-gtk.c: (hildon_gtk_tree_view_new): Explicitly
	set GtkTreeView::enable-search to FALSE, to avoid the interactive
	search widget to popup.

2008-12-03  Claudio Saavedra  <csaavedra@igalia.com>

	* configure.ac: post release version bump
	* debian/changelog: version bump
