@@ -1,3 +1,12 @@
+2008-12-05 14:42:11  Tim Janik  <timj@imendio.com>
+
+	* src/hildon-gtk.h: removed hildon_gtk_widget_set_theme_size() and
+	HildonSizeType, which are supplied by Gtk+ now.
+
+	* src/hildon-dialog.c: leave theming and sizing of buttons to GtkDialog.
+
+	* Fixes NB#90867, patch by Christian Dywan.
+
 2008-12-05  Claudio Saavedra  <csaavedra@igalia.com>
 
 	Patch contributed by Iván Gómez (igomez@igalia.com)
